# liepin-JobHelper

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  preferences-template.md  pyproject.toml  如何使用.md
docs/: safety.md  setup.md  workflow.md
examples/: job.example.md  job_apply_log.example.md  job_detail.example.md  job_search_archive.example.md  preferences.example.md
prompts/: main-agent-prompt.md
scripts/: export_to_md.py  import_from_md.py
src/job_agent/: cli.py
src/job_agent/api/: deps.py  main.py
src/job_agent/api/routes/: jobs.py
src/job_agent/core/: rules.py  schemas.py
src/job_agent/db/: init_db.py  models.py  session.py
src/job_agent/langchain/: __init__.py  matching.py  recommendation.py
src/job_agent/mcp/: liepin.py
src/job_agent/schemas/: application.py  common.py  job.py  preference.py
src/job_agent/services/: apply_state_machine.py  job_service.py  markdown_loader.py  pending_action_service.py
templates/: job.template.md  job_apply_log.template.md  job_detail.template.md  job_search_archive.template.md  preferences.template.md
tests/: test_job_service.py  test_langchain.py  test_pending_action.py
