[project]
name = "job-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0"
]

[project.scripts]
job-agent = "job_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
